@@ -4,7 +4,7 @@
 
 ;; Author: John Sullivan <john@wjsullivan.net>
 ;; Created 25 October 2004
-;; Version: 0.1
+;; Version: 0.1 2004-12-20
 ;; Keywords: comm, hypermedia
 
 ;; This program is free software; you can redistribute it and/or
@@ -65,7 +65,7 @@
 (defvar delicious-api "/api/"
   "*The path to the del.ici.ous api. It should begin and end in a slash.")
 
-(defconst delicious-api-version "delicious.el/0.1 2004-12-12"
+(defconst delicious-api-version "delicious.el/0.1 2004-12-20"
   "The version string for this copy of delicious-api.el.")
 
 (defconst delicious-api-field-match "=\"\\(.*?\\)\""
